# git-backup

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.py
git_backup/: config.cfg.dist  run.py
git_repo_backup/: backup.py
